# archive

./: LICENSE  README.md  README.txt
celestial-engine/: Celestial Engine.sln
celestial-engine/Celestial Engine/: Celestial Engine.vcxproj  Celestial Engine.vcxproj.filters
comp4-rubikscube/: RubiksCube.sln
comp4-rubikscube/RubiksCube/: Cube.cs  CubePiece.cs  Main.Designer.cs  Main.cs  Main.resx  Program.cs  Quat.cs  Vec3.cs
epq-entitysandbox/: EPQ.sln  EPQ.vcxproj  EPQ.vcxproj.filters
epq-entitysandbox/src/: agent.cpp  agent.h  application.cpp  application.h  itemManager.cpp  itemManager.h  items.cpp  items.h  main.cpp  main.h
ic-gamejam-2014/: .gitignore  CMakeLists.txt  README.md
ic-gamejam-2014/CMake/: FindBox2D.cmake
ic-gamejam-2014/rust/: Makefile  gamejam.sublime-project  run.sh
ic-gamejam-2014/rust/src/: context.rs  entity.rs  main.rs  object.rs  window.rs
ic-gamejam-2014/src/: entity.cpp  entity.h  game.h  level.cpp  level.h  main.cpp  main.h  object.cpp  object.h  states.cpp  states.h  timer.cpp  timer.h  trigger.cpp  trigger.h
ic-gamejam-2015/: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md
ic-gamejam-2015/media/: map1.data  map2.data
ic-gamejam-2015/src/: Bullet.cpp  Bullet.h  Common.h  Cursor.cpp  Cursor.h  Entity.h  Explosion.cpp  Explosion.h  Game.cpp  Game.h  Main.cpp  Map.cpp  Map.h  Track.cpp  Track.h  Train.cpp  Train.h  Turret.cpp  Turret.h  Waypoint.cpp  Waypoint.h
iggcm-2016/: .gitignore  CMakeLists.txt  LICENSE  README.md
iggcm-2016/CMake/: Utilities.cmake
iggcm-2016/media/: default.fs  default.vs  light.vs  point-light.fs
ludumdare28/: .gitignore  LD28.sln  LD28.vcxproj  LD28.vcxproj.filters  LICENSE
ludumdare28/src/: BulletEntity.cpp  BulletEntity.h  BulletManager.cpp  BulletManager.h  Collision.cpp  Collision.h  Common.cpp  Common.h  DameageableEntity.cpp  DameageableEntity.h  EnemyEntity.cpp  EnemyEntity.h  EnemyPartEntity.cpp  EnemyPartEntity.h  (+21 more)
velocity-engine/: README.md  VE.hpp  VEActor.cpp  VEActor.hpp  VEAudio.cpp  VEAudio.hpp  VEBase.cpp  VEBase.hpp  VEBullet.hpp  VEBulletFactory.hpp  VEEngine.cpp  VEEngine.hpp  VEEvent.cpp  VEEvent.hpp  VEEventDispatcher.cpp  VEEventDispatcher.hpp  VEGraphics.cpp  VEGraphics.hpp  VEInput.cpp  VEInput.hpp  VELuaState.cpp  VELuaState.hpp  VEResCache.cpp  VEResCache.hpp  VEResource.cpp  VEResource.hpp  VESceneGraph.cpp  VESceneGraph.hpp  VEScreen.hpp  VEScreenManager.cpp  VEScreenManager.hpp
(+88 files in other folders)
